# qmrust

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/porting-qmrlab-models/: SKILL.md  scaffold_model.sh  test_scaffold.sh
.claude/skills/porting-qmrlab-models/references/: optional-inputs.md  reading-qmrlab.md  translation-patterns.md  validation.md
.github/workflows/: ci.yml  docs.yml
ci/: compare_maps.py  integration_osf.sh
crates/qmrust-bids/: Cargo.toml
crates/qmrust-bids/src/: collection.rs  config.rs  entities.rs  fs.rs  lib.rs  protocol.rs  resolve.rs  table.rs
crates/qmrust-bids/tests/: oracle.rs
crates/qmrust-bids/tests/fixtures/: README.md
crates/qmrust-bids/tests/fixtures/expected/qmri_irt1/: sub-01_NA_NA_NA_unified.json
crates/qmrust-cli/: Cargo.toml  build.rs
crates/qmrust-cli/src/: bidsify.rs  commands.rs  main.rs  mtsat_b1.rs  progress.rs  provenance.rs
crates/qmrust-cli/src/io/: bids_fs.rs  mat.rs  mod.rs  nifti.rs
crates/qmrust-core/: Cargo.toml
crates/qmrust-core/src/: config.rs  engine.rs  fitting.rs  lib.rs  protocol.rs  quad.rs  registry.rs
crates/qmrust-core/src/core/: mod.rs  model.rs
crates/qmrust-core/src/models/: mod.rs
crates/qmrust-core/src/models/inversion_recovery/: config.rs  fit.rs  mod.rs  model.rs
crates/qmrust-core/src/models/mono_t2/: config.rs  fit.rs  mod.rs  model.rs
crates/qmrust-core/src/models/mt_ratio/: config.rs  fit.rs  mod.rs  model.rs
crates/qmrust-core/src/models/mt_sat/: config.rs  fit.rs  mod.rs  model.rs
crates/qmrust-core/src/models/qmt_spgr/: adapter.rs  config.rs  fit.rs  lineshape.rs  mod.rs  model.rs  ode.rs  pulse.rs  sf.rs
crates/qmrust-core/src/mtsat_b1/: calibrate.rs  correct.rs  fitvalues.rs  lineshape.rs  mat3.rs  mat5.rs  mod.rs  pulse.rs  rate.rs  sim.rs  surface.rs
crates/qmrust-core/src/sim/: mod.rs  model.rs  noise.rs  plot.rs  report.rs
crates/qmrust-wasm/: Cargo.toml  README.md
crates/qmrust-wasm/src/: api.rs  lib.rs  wasm.rs
crates/qmrust-wasm/tests/: browser.rs
crates/rust-bids/: Cargo.toml
crates/rust-bids/src/: collection.rs  config.rs  default_grouping.yaml  entities.rs  lib.rs  protocol.rs  resolve.rs  scan.rs  sidecar.rs  table.rs  vocab.rs
crates/rust-bids/tests/: oracle.rs
crates/rust-bids/tests/fixtures/: README.md
crates/rust-bids/tests/fixtures/expected/qmri_mtsat/: sub-01_NA_NA_NA_unified.json
docs/: README.md  architecture.md  bids.md  browser.md  getting-started.md  index.md  models.md  myst.yml
docs/agents/: ADDING-A-MODEL.md  ARCHITECTURE.md  DATA-PIPELINE.md
prots/: irt1_config.yaml  qmt_config_ramani.yaml  qmt_config_sledpikerp.yaml  qmt_sim_ramani.yaml
recipes/: README.md  mtsat_b1_seq.yaml
recipes/bids/: irt1_config.yaml  mono_t2_config.yaml  mt_ratio_config.yaml  mt_sat_b1corr_config.yaml  mt_sat_config.yaml  qmt_config_ramani.yaml  qmt_config_sledpikerp.yaml
recipes/non-bids/: irt1_config.yaml  mono_t2_config.yaml  mt_ratio_config.yaml  mt_sat_config.yaml  qmt_config_ramani.yaml
scripts/: make_bids_examples.sh  make_qmt_figure.py  make_t1_figure.py  vendor_bids2nf_fixtures.sh  vendor_reference_fixtures.sh
