[package]
name = "qmrust-core"
description = "Pure quantitative-MRI fitting core (models, engine, registry, sim) — wasm-clean"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "qmrust_core"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
ndarray.workspace = true
rayon.workspace = true
anyhow.workspace = true
levenberg-marquardt.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_distr.workspace = true
plotters.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
matfile = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
